--- a/new/index_1.html
+++ b/new/index_1.html
@@ -7,7 +7,7 @@
   <script src="//dapi.kakao.com/v2/maps/sdk.js?appkey=1e75840f42aa7cd8c51a2357713200b4&libraries=services,clusterer"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-  <link rel="stylesheet" href="style_1.css">
+  <link rel="stylesheet" href="new/style_1.css">
 </head>
 <body>
 <h2>📍 현장조사 위치 수집</h2>
@@ -40,6 +40,6 @@
 <button onclick="downloadPDF()">📄 PDF로 저장</button>
 <button onclick="toggleCadLayer()" id="cadBtn">🗺️ 지적편집도 토글</button>
 <div id="legend"></div>
-<script src="script_1.js"></script>
+<script src="new/script_1.js"></script>
 </body>
 </html>
