--- a/new/test_pretty.html
+++ b/new/test_pretty.html
@@ -86,7 +86,7 @@
     <label for="geojsonTest">GeoJSON 파일 미리보기:</label>
     <input type="file" id="geojsonTest" accept=".geojson" onchange="previewGeojson(event)">
     <div id="preview"></div>
-    <a href="index_1.html" class="btn" target="_blank" aria-label="메인 조사 앱 페이지로 이동">index.html 열기</a>
+    <a href="new/index_1.html" class="btn" target="_blank" aria-label="메인 조사 앱 페이지로 이동">index.html 열기</a>
   </div>
 
   <script>
