전체 폴더 업데이트

--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
 <!-- 남은 시간 표시 -->
 <div id="countdown" style="font-weight:bold; color:#333; margin-top:8px;"></div>
 <div id="map"></div>
+<button id="locateBtn" style="position: absolute; top: 12px; left: 12px; z-index: 5;
+       padding: 6px 12px; background:#fff; border:1px solid #ccc; border-radius:4px;
+       cursor:pointer;">
+  📍 내 위치
+</button>
 
 <!-- ✅ 리포트 분석 (GeoJSON 다중 분석 + 차트 + PDF) -->
 <hr>
