--- a/index.html
+++ b/index.html
@@ -52,7 +52,28 @@
 <div id="status"></div>
 <!-- 남은 시간 표시 -->
 <div id="countdown" style="font-weight:bold; color:#333; margin-top:8px;"></div>
-<div id="map"></div>
+
+<!-- map 컨테이너를 position:relative 로 바꿈 -->
+<div id="map" style="position:relative; width:100%; height:350px;">
+
+  <!-- 여기에 내 위치 버튼을 넣고 절대위치, z-index 지정 -->
+  <button id="locateBtn"
+    style="
+      position:absolute;
+      top:10px;
+      left:10px;
+      z-index:1000;
+      padding:6px 10px;
+      background:white;
+      border:1px solid #ccc;
+      border-radius:4px;
+      cursor:pointer;
+    ">
+    📍 내 위치
+  </button>
+
+</div>
+
 <button id="locateBtn" style="position: absolute; top: 12px; left: 12px; z-index: 5;
        padding: 6px 12px; background:#fff; border:1px solid #ccc; border-radius:4px;
        cursor:pointer;">
