--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 <label>기존 조사 파일 불러오기 (.geojson):</label>
 <input type="file" id="geojsonInput" accept=".geojson" multiple onchange="loadGeojsonFiles(event)">
 
+<!-- 상태/카운트다운 -->
 <div id="status"></div>
 <!-- 남은 시간 표시 -->
 <div id="countdown" style="font-weight:bold; color:#333; margin-top:8px;"></div>
@@ -56,7 +57,7 @@
 <!-- map 컨테이너를 position:relative 로 바꿈 -->
 <div id="map" style="position:relative; width:100%; height:350px;">
 
-  <!-- 여기에 내 위치 버튼을 넣고 절대위치, z-index 지정 -->
+  <!-- 내 위치 버튼(절대위치), z-index 지정 -->
   <button id="locateBtn"
     style="
       position:absolute;
@@ -72,7 +73,27 @@
     📍 내 위치
   </button>
 
+  <!-- 지적편집도 토글 버튼 (절대위치) -->
+  <button id="cadBtn"
+  style="
+    position:absolute;
+    bottom:20px;
+    left:12px;
+    z-index:1000;
+    padding:8px 12px;
+    background:#333;
+    color:#fff;
+    border:none;
+    border-radius:4px;
+    cursor:pointer;
+  "
+  onclick="toggleCadLayer()"
+>
+  🗺️ 지적편집도 토글
+</button>
+
 </div>
+<!-- ▲ map 컨테이너 끝 ▲ -->
 
 <!-- ✅ 리포트 분석 (GeoJSON 다중 분석 + 차트 + PDF) -->
 <hr>
@@ -84,7 +105,7 @@
 <button onclick="downloadPDF()">📄 PDF로 저장</button>
 
 <!-- ✅ 지도 컨트롤: 지적편집도 토글, 레전드 표시 -->
-<button onclick="toggleCadLayer()" id="cadBtn">🗺️ 지적편집도 토글</button>
+<!-- button onclick="toggleCadLayer()" id="cadBtn">🗺️ 지적편집도 토글</button -->
 <div id="legend"></div>
 
 <!-- ✅ JavaScript 로직 로드 -->
