--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
 <div id="countdown" style="font-weight:bold; color:#333; margin-top:8px;"></div>
 
 <!-- map 컨테이너를 position:relative 로 바꿈 -->
-<div id="map" style="position:relative; width:100%; height:350px;">
+<!-- div id="map" style="position:relative; width:100%; height:350px;"-->
+<div id="map" style="position:relative; width:100%;">
 
   <!-- 내 위치 버튼(절대위치), z-index 지정 -->
   <button id="locateBtn"
