--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <input type="text" id="name" placeholder="이름 입력">
 
 <label>장소명 (최대 254자):</label>
-<input type="text" id="placename" maxlength="254" placeholder="예: 군위군 쉼터">
+<input type="text" id="placename" maxlength="254" placeholder="예: 무더위쉼터">
 
 <label>위치 수집 시간:</label>
 <select id="duration">
